# Codec

./: .gitignore  AGENTS.md  CLAUDE.md  DOC-RECONCILIATION.md  IMPLEMENTATION-ROADMAP.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.codex/: verify.commands
docs/: DEMO-CHECKLIST.md
scripts/: grant-bpf.sh  install-helper.sh  uninstall-helper.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/helper/: Cargo.toml
src-tauri/helper/src/: aggregator.rs  arp_spoof.rs  capture.rs  main.rs  models.rs  parser.rs  socket.rs
src-tauri/helper/src/decoder/: dhcp.rs  dns.rs  mdns.rs  mod.rs  tls.rs
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/capture/: device_registry.rs  helper_client.rs  mod.rs
src-tauri/src/commands/: flows.rs  mod.rs  settings.rs
src-tauri/src/db/: queries.rs  schema.rs
src/components/ConversationView/: ConversationThread.tsx  ConversationView.tsx  EmptyState.tsx  MessageBubble.tsx
src/components/DevicePanel/: DevicePanel.tsx  DeviceRow.tsx
src/components/HistoryPanel/: HistoryPanel.tsx
src/components/TopologyView/: NodeTooltip.tsx  TopologyView.tsx  useForceGraph.ts
src/components/shared/: DeviceIcon.tsx  ProtocolBadge.tsx  StatusBar.tsx
src/lib/: formatters.ts  tauri.ts
src/store/: device-store.ts  flow-store.ts
src/types/: index.ts
