[workspace]
members = ["helper"]

[package]
name = "codec"
version = "0.1.0"
description = "Network traffic awareness for your home subnet"
edition = "2021"

[lib]
name = "codec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
