[package]
name = "codec-helper"
version = "0.1.0"
description = "Privileged capture helper for Codec"
edition = "2021"

[[bin]]
name = "codec-helper"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
pcap = "2"
pnet_packet = "0.35"
pnet = "0.35"
simple-dns = "0.9"
nom = "7"
